<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageProfileActivity">

    <TextView
        android:id="@+id/manage_profile_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/drawer_manage_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/drawer_manage_profile_color"
        />

    <ImageView
        android:id="@+id/manage_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:padding="2dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/profile_pic_speakable_text"
        android:src="@drawable/baseline_person_24"
        android:background="@drawable/square_border"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/manage_profile_change_pfp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/change_pfp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/change_pfp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@id/manage_profile_delete_pfp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_picture" />

    <Button
        android:id="@+id/manage_profile_delete_pfp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/delete_pfp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/delete"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/manage_profile_change_pfp"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_picture" />

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manage_profile_name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_change_pfp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manage_profile_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manage_profile_email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manage_profile_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone number input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/manage_profile_phone_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_email_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manage_profile_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="phone"
            android:hint="@string/phone_number_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/manage_profile_notifications_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_label"
        android:padding="8dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_phone_input_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/manage_profile_notifications_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_notifications_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/manage_profile_notifications_admin"
        android:text="@string/organizers"
        android:textSize="20sp"
        />

    <CheckBox
        android:id="@+id/manage_profile_notifications_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_notifications_label"
        app:layout_constraintStart_toEndOf="@id/manage_profile_notifications_organizer"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/administrators"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/manage_profile_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/cancel"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_notifications_organizer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/manage_profile_save"/>

    <Button
        android:id="@+id/manage_profile_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/save"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/save"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/manage_profile_notifications_organizer"
        app:layout_constraintStart_toEndOf="@id/manage_profile_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>