<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialLoginActivity">

    <TextView
        android:id="@+id/initial_login_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_sphinx_events"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/initial_login_header"
        />

    <TextView
        android:id="@+id/initial_login_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_your_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/initial_login_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Name Input -->
    <TextView
        android:id="@+id/initial_login_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/initial_login_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/initial_login_name_input_layout"
        app:layout_constraintHorizontal_bias="0.03"
        android:layout_marginTop="16dp"
        android:labelFor="@id/initial_login_name_edit_text"
        android:contentDescription="@string/name_hint"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/initial_login_name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/initial_login_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.95">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/initial_login_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email input -->
    <TextView
        android:id="@+id/initial_login_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/initial_login_name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/initial_login_email_input_layout"
        app:layout_constraintHorizontal_bias="0.03"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/email_hint"
        android:labelFor="@id/initial_login_email_edit_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/initial_login_email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/initial_login_email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.95">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/initial_login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone number input -->
    <TextView
        android:id="@+id/initial_login_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/initial_login_email_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/initial_login_phone_input_layout"
        app:layout_constraintHorizontal_bias="0.03"
        android:layout_marginTop="16dp"
        android:labelFor="@id/initial_login_phone_edit_text"
        android:contentDescription="@string/phone_number_hint"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/initial_login_phone_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/initial_login_phone_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.95">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/initial_login_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_profile_button_txt"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        app:cornerRadius="0dp"
        android:textSize="24sp"
        android:backgroundTint="@color/initial_login_create_profile_button"
        app:layout_constraintTop_toBottomOf="@id/initial_login_phone_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>