<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FacilitySearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facility_search_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:background="@color/facility_search_header_color">

        <ImageButton
            android:id="@+id/search_facility_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/go_back"
            android:src="@drawable/black_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/facility_search_header_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/facility_results_for"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/search_query_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/facility_search_query_color"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/search_query"
        android:textColor="@color/black"
        android:textSize="20sp" />
    
    <ListView
        android:id="@+id/facilities_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/no_results_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_result_found"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"/>

</LinearLayout>