<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageFacilityActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/removing_facility_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:background="@color/facility_search_header_color">

        <ImageButton
            android:id="@+id/removing_facility_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/facility_search_header_color"
            android:contentDescription="@string/go_back"
            android:src="@drawable/black_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/facility_details"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/facility_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/removing_facility_header"
        app:layout_constraintBottom_toTopOf="@id/facility_phone_number_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/facility_name_textview_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/facility_name_label"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/facility_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="Facility Name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/facility_phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/facility_name_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/facility_phone_number_textview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/facility_phone_number_label"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/facility_phone_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="Facility Phone Number"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_facility_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/facility_phone_number_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"
        android:text="@string/remove"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:backgroundTint="@color/facility_negative_button_color"
        app:cornerRadius="4dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>